fixing overflow issues

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,9 +10,11 @@
 
 body {
   font-family: 'Advent Pro', sans-serif;
-  overflow-x: hidden;
 }
 
+.content-wrapper {
+  overflow-x: hidden;
+}
 
 .img-fluid {
   max-width: 100%;
